fix drp nav#Navbar z-index

--- a/src/drp/js/themes/drp/css/metacatui.css
+++ b/src/drp/js/themes/drp/css/metacatui.css
@@ -563,7 +563,7 @@ section#mainContent a.btn-info:hover {
         top: 0px;
         width: 100%;
         position:fixed;
-        z-index: calc(var(--map-z-index-feature-info) + 1);
+        z-index: 2000;
     }
     #bg_image {
           background-size: cover;
